tests/snapshots/examples_fixtures/aoc__2025__aoc_day2_haskell_style.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day2_haskell_style.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `has_key`.

  examples/aoc/2025/aoc_day2_haskell_style.flx:64:16
   |
64 |             if has_key(seen, candidate) {
   |                ^^^^^^^

Hint:
  Define it first: let has_key = ...;
== stdout ==
<not executed>
